--- a/package.json
+++ b/package.json
@@ -1,25 +1,8 @@
 {
-  "name": "moonshine",
+  "name": "alaugustin",
   "version": "1.0.0",
-  "description": "",
+  "description": "<!-- **alaugustin/alaugustin** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-server": "npx webpack serve --live-reload",
-    "build": "npx webpack",
-    "start": "webpack serve --mode=development --open",
-    "build-tailwind": "npx tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --watch"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alaugustin/moonshine.git"
-  },
-  "author": "Al Augustin",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/alaugustin/moonshine/issues"
-  },
-  "homepage": "https://github.com/alaugustin/moonshine#readme",
   "devDependencies": {
     "eslint": "^8.34.0",
     "html-webpack-plugin": "^5.5.1",
@@ -34,5 +17,14 @@
     "css-loader": "^6.7.3",
     "lodash": "^4.17.21",
     "style-loader": "^3.3.2"
-  }
+},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev-server": "npx webpack serve --live-reload",
+    "build": "npx webpack",
+    "start": "webpack serve --mode=development --open",
+    "build-tailwind": "npx tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --watch"
+  },
+  "author": "Al Augustin",
+  "license": "ISC"
 }
